test_scores/negative_dimers/features/Q6ZNE5.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q6ZNE5.pkl.xz